# leb128

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  leb128.cabal
.github/workflows/: haskell-ci.yml
bench/: Bench.hs
src/Codec/: LEB128.hs
src/Codec/LEB128/: BS.hs  Cereal.hs  Constraints.hs  Generic.hs  List.hs
src/Codec/LEB128/Internal/: BS.hs
src/Data/LEB/: List.hs
test/: TestLEB.hs
test/LEB128/: Props.hs
