cabal-version:       1.22

name:                leb128
version:             0.1.0.0
synopsis:            LEB128 encoding logic for and in Haskell
description:         Encode and decode integral numbers to and from sequences of bytes using LEB128.
homepage:            https://github.com/AndreasPK/leb128/issues

-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Andreas Klebinger
maintainer:          klebinger.andreas@gmx.at
-- copyright:
category:            Codec
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/AndreasPK/leb128

Flag cereal
  Description: Support cereal based decoding.
  Default:     False

library
  exposed-modules:
    Codec.LEB128.List
    Codec.LEB128.Generic
    Codec.LEB128.BS
    Codec.LEB128
  build-depends:
      base >= 4.8 && < 4.15
    , bytestring >= 0.10.6 && < 0.10.11
    , ghc-prim
    , transformers
  build-depends:       bytestring, ghc-prim
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -ddump-stg-final -ddump-simpl -ddump-to-file
               -dno-typeable-binds -fforce-recomp
               -ddump-ds
  if flag(cereal)
    exposed-modules:
      Codec.LEB128.Cereal
    build-depends: cereal

test-suite leb128-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:
      TestLEB.hs
  other-modules:

  build-depends:
      base
    , leb128
    , QuickCheck >= 2.13 && < 2.15
    , test-framework >= 0.8 && < 0.9
    , test-framework-quickcheck2 >= 0.3 && < 0.4

benchmark leb128-bench
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:
      base
    , leb128
    , criterion >= 1.5 && < 1.6
    , bytestring
    , deepseq

  -- ghc-options:
  --     -fproc-alignment=64
  --     -ddump-stg-final -ddump-simpl -ddump-to-file
  --     -fforce-recomp -dno-typeable-binds -O
  --     -ddump-ds -dno-suppress-stg-exts

